# tg-posts-grabber

./: .env.example  .gitignore  README.md  analysis_before_tuning.json  analysis_video_engineer_pains.json  analysis_video_engineer_pains.md  analyze_channel.py  bootstrap.sh  pyproject.toml  sources.yaml  style_examples.md  survey_sources.py
docs/: sources-setup.md
grabber/: __main__.py  config.py  content.py  dedup.py  llm.py  notify.py  prefilter.py  state.py
grabber/fetchers/: __init__.py  _http.py  bluesky.py  discord.py  hn.py  html.py  linkedin.py  rss.py  slack.py  telegram_web.py
