[project]
name = "tg-grabber"
version = "0.1.0"
description = "Fetch video-engineering news, filter with an LLM, and send post drafts to Telegram"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx[socks]>=0.27",
    "beautifulsoup4>=4.12",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
